 - Changed the CCCs to build in one step (for both HTTP and DPI). This
   is simpler and helps to avoid race conditions.
 - Updated CCCwork.txt to the new scheme.
 - Fixed a bug with OPTION element (it was parsing entities twice).
 - Bugfix: remove the empty cache entry lingering after connection abort.
 - Switched capi to use dlib's Dlist instead of a_List_* methods.
   Patches: Jorge Arellano Cid
+- Fix segfault from AREA when MAP is missing name attribute.
 - Fix image map coordinates when margin/border/padding present.
 - Handle stylesheet @charset.
 - Fix cache segfault when cache entry removed.
 - Split words that contain whitespace as numeric character references.
 - Allow linebreaks around Chinese/Japanese characters.
 - Fix segfault in Html_parse_doctype (BUG#918).
 - Change exit code used for bad command line argument.
   Patches: corvid

-----------------------------------------------------------------------------

dillo-2.1.1 [Jul 3, 2009]

+- Add additional size checks for images.
   Patch: Jorge Arellano Cid, Johannes Hofmann, corvid
+- Fixed a bug in parsing RGB color values (CSS).
 - Added support for css colors of the form rgb(255, 255, 255).
 - Assert that SimpleVector size is positive.
   Patches: Johannes Hofmann
+- Removed redundant system includes.
 - Added the "nop" keybinding (nop = NO_OPERATION; cancels a default hook).
 - Added 'stop' key action (not bound by default).
 - Fixed segfault when URL is NULL and dpis can't be found.
   Patches: place (AKA corvid)
+- Reduced 'warning: ignoring return value of ...'
   Patch: Michal Nowak, Jorge Arellano Cid
+- Check chdir() return code in Paths::init.
 - Removed return from a_Nav_unref_buf()
 - Do not build proto.c (file is empty); GCC warning
   Patches: Michal Nowak

-----------------------------------------------------------------------------

dillo-2.1 [Jun 15, 2009]

+- Added ipv6 addresses iteration and ipv4 fallback.
   Patch: James Turner, Jorge Arellano Cid